Fix vedio tag on mobile

--- a/css/theme.css
+++ b/css/theme.css
@@ -5190,6 +5190,7 @@ body.lb-disable-scrolling .section-header {
   left: 50%;
   min-width: 100%;
   min-height: 100%;
+  max-width: 100%;;
   width: auto;
   height: auto;
   z-index: 0;
@@ -5215,11 +5216,30 @@ body.lb-disable-scrolling .section-header {
   z-index: 1;
 }
 
+
+@media all and (min-width:321px) and (max-width: 641px){ /* smartphones, iPhone, portrait 480x320 phones */ 
+  .video-header {
+    margin-bottom: -300px;
+    margin-top: -250px;
+  }
+  .video-header .v-overlay{display: none;}
+  .video-header video {
+    
+  }
+}
+@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
+
+}
+@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
+@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px) { /* hi-res laptops and desktops */ }
+
 /* Media Query for devices withi coarse pointers and no hover functionality */
 
 /* This will use a fallback image instead of a video for devices that commonly do not support the HTML5 video element */
 
-@media (pointer: coarse) and (hover: none) {
+/* @media (pointer: coarse) and (hover: none) {
   .video-header {
     background: url('../images/slider-home-dark.jpg') rgb(255, 255, 255) no-repeat center center scroll;
   }
@@ -5227,5 +5247,5 @@ body.lb-disable-scrolling .section-header {
   .video-header video {
     display: none;
   }
-}
+} */
 /* video end*/
